// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatsLoader component matches snapshot, with amount 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="item-0-2-12"
    >
      <div
        class="wrp-0-2-16 img-0-2-13"
      >
        <div
          class="item-0-2-17"
        />
      </div>
      <div
        class="text-0-2-14"
      >
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19 short-0-2-20"
        />
      </div>
    </li>
    <li
      class="item-0-2-12"
    >
      <div
        class="wrp-0-2-16 img-0-2-13"
      >
        <div
          class="item-0-2-17"
        />
      </div>
      <div
        class="text-0-2-14"
      >
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19 short-0-2-20"
        />
      </div>
    </li>
    <li
      class="item-0-2-12"
    >
      <div
        class="wrp-0-2-16 img-0-2-13"
      >
        <div
          class="item-0-2-17"
        />
      </div>
      <div
        class="text-0-2-14"
      >
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19 short-0-2-20"
        />
      </div>
    </li>
    <li
      class="item-0-2-12"
    >
      <div
        class="wrp-0-2-16 img-0-2-13"
      >
        <div
          class="item-0-2-17"
        />
      </div>
      <div
        class="text-0-2-14"
      >
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19 short-0-2-20"
        />
      </div>
    </li>
    <li
      class="item-0-2-12"
    >
      <div
        class="wrp-0-2-16 img-0-2-13"
      >
        <div
          class="item-0-2-17"
        />
      </div>
      <div
        class="text-0-2-14"
      >
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19"
        />
        <div
          class="text-0-2-19 short-0-2-20"
        />
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ChatsLoader component matches snapshot, with className 1`] = `
<DocumentFragment>
  <ul
    class="test"
  >
    <li
      class="item-0-2-22"
    >
      <div
        class="wrp-0-2-26 img-0-2-23"
      >
        <div
          class="item-0-2-27"
        />
      </div>
      <div
        class="text-0-2-24"
      >
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29 short-0-2-30"
        />
      </div>
    </li>
    <li
      class="item-0-2-22"
    >
      <div
        class="wrp-0-2-26 img-0-2-23"
      >
        <div
          class="item-0-2-27"
        />
      </div>
      <div
        class="text-0-2-24"
      >
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29 short-0-2-30"
        />
      </div>
    </li>
    <li
      class="item-0-2-22"
    >
      <div
        class="wrp-0-2-26 img-0-2-23"
      >
        <div
          class="item-0-2-27"
        />
      </div>
      <div
        class="text-0-2-24"
      >
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29 short-0-2-30"
        />
      </div>
    </li>
    <li
      class="item-0-2-22"
    >
      <div
        class="wrp-0-2-26 img-0-2-23"
      >
        <div
          class="item-0-2-27"
        />
      </div>
      <div
        class="text-0-2-24"
      >
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29 short-0-2-30"
        />
      </div>
    </li>
    <li
      class="item-0-2-22"
    >
      <div
        class="wrp-0-2-26 img-0-2-23"
      >
        <div
          class="item-0-2-27"
        />
      </div>
      <div
        class="text-0-2-24"
      >
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29"
        />
        <div
          class="text-0-2-29 short-0-2-30"
        />
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ChatsLoader component matches snapshot, without props 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="item-0-2-2"
    >
      <div
        class="wrp-0-2-6 img-0-2-3"
      >
        <div
          class="item-0-2-7"
        />
      </div>
      <div
        class="text-0-2-4"
      >
        <div
          class="text-0-2-9"
        />
        <div
          class="text-0-2-9"
        />
        <div
          class="text-0-2-9 short-0-2-10"
        />
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
